# cv-test

./: .gitignore  CMakeLists.txt  README.md
python/image/: bgr2gray.py  create_image.py  load_image.py  plot_image.py  plot_image1.py  plot_image2.py  plot_image3.py  show_image.py  take_photo.py
python/video/: add_frame_number.py  play_camera.py  play_video.py  record_camera.py  video_props.py
src/: CMakeLists.txt  create_image.cpp  ellipse.cpp  filled_polygon.cpp  line.cpp  rectangle.cpp
src/drawing/: CMakeLists.txt  README.md  circle.cpp  ellipse.cpp  filled_polygon.cpp  line.cpp  rectangle.cpp  text.cpp
src/image/: CMakeLists.txt  PNGUtils.cpp  PNGUtils.h  convert_raw_mat.cpp  create_image.cpp  histeq.cpp  img2ppm.cpp  mat2jpg.cpp  mat2png.cpp  png2ppm.cpp  ppm.cpp  ppm.h  show_image.cpp  show_image_gray.cpp  show_raw_mat.cpp  webp2jpg.cpp
src/video/: CMakeLists.txt  play_camera.cpp  play_video.cpp  unpack_video.cpp
tools/: build_linux.sh  build_osx.sh  format_cpp.sh
