CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
PROJECT(cvtest)

SET(CMAKE_CXX_FLAGS "-Wall -O3 -std=c++11")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")

FIND_PACKAGE(OpenCV 3 REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
