CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(cvtest)

SET(CMAKE_CXX_FLAGS "-Wall -O3 -std=c++11")

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${EXECUTABLE_OUTPUT_PATH}")

# Find OpenCV in system folders
FIND_PACKAGE(OpenCV 3 REQUIRED)

# Uncomment this to use myself compiled OpenCV
# FIND_PACKAGE(OpenCV 3 REQUIRED
#     PATHS "/path/to/opt/opencv/3.4.2/share"
#     NO_DEFAULT_PATH
# )

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_SUBDIRECTORY(src)
